<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textColor="@color/secondary_text"
        android:textAlignment="center"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        android:layout_marginTop="@dimen/espacio_top"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/espacio_top"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        />
    <TextView
        android:id="@+id/tvedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/espacio_top"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        />
    <TextView
        android:id="@+id/tvtelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/espacio_top"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        />
    <TextView
        android:id="@+id/tvcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/espacio_top"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        />
    <TextView
        android:id="@+id/tvinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/espacio_top"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        />
    <Button
        android:id="@+id/btnok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/okbtn"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/tamaño_de_letra"
        android:layout_marginTop="@dimen/espacio_top"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>